- Remove two unneeded parameter sets from `Show-ADTInstallationWelcome`.

--- a/docs/Show-ADTInstallationWelcome.mdx
+++ b/docs/Show-ADTInstallationWelcome.mdx
@@ -136,22 +136,6 @@ Show-ADTInstallationWelcome [-AllowDefer] [-DeferTimes <UInt32>] [-DeferDays <UI
  [-CustomText] [-CheckDiskSpace] -Title <String> -Subtitle <String> [<CommonParameters>]
 ```
 
-### InteractiveAllowDeferCloseProcessesForceCountdown
-
-```powershell
-Show-ADTInstallationWelcome [-AllowDeferCloseProcesses] -ForceCountdown <UInt32> [-PersistPrompt]
- [-NoMinimizeWindows] [-NotTopMost] [-CustomText] [-CheckDiskSpace] -Title <String> -Subtitle <String>
- [<CommonParameters>]
-```
-
-### InteractiveAllowDeferCloseProcesses
-
-```powershell
-Show-ADTInstallationWelcome [-AllowDeferCloseProcesses] [-DeferTimes <UInt32>] [-DeferDays <UInt32>]
- [-DeferDeadline <String>] [-DeferRunInterval <TimeSpan>] [-PersistPrompt] [-NoMinimizeWindows] [-NotTopMost]
- [-CustomText] [-CheckDiskSpace] -Title <String> -Subtitle <String> [<CommonParameters>]
-```
-
 ### Silent
 
 ```powershell
@@ -279,7 +263,7 @@ This parameter automatically enables -AllowDefer
 
 ```yaml
 Type: SwitchParameter
-Parameter Sets: InteractiveCloseProcessesAllowDeferCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferCloseProcesses, InteractiveAllowDeferCloseProcessesForceCountdown, InteractiveAllowDeferCloseProcesses
+Parameter Sets: InteractiveCloseProcessesAllowDeferCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferCloseProcesses
 Aliases:
 
 Required: True
@@ -344,7 +328,7 @@ Specify a countdown to display before automatically proceeding with the deployme
 
 ```yaml
 Type: UInt32
-Parameter Sets: InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferForceCountdown, InteractiveAllowDeferForceCountdown, InteractiveAllowDeferCloseProcessesForceCountdown
+Parameter Sets: InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferForceCountdown, InteractiveAllowDeferForceCountdown
 Aliases:
 
 Required: True
@@ -360,7 +344,7 @@ Specify the number of times the deployment can be deferred.
 
 ```yaml
 Type: UInt32
-Parameter Sets: InteractiveCloseProcessesAllowDeferCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferCloseProcesses, InteractiveCloseProcessesAllowDeferForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferForceCountdown, InteractiveCloseProcessesAllowDefer, InteractiveAllowDefer, InteractiveAllowDeferCloseProcesses
+Parameter Sets: InteractiveCloseProcessesAllowDeferCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferCloseProcesses, InteractiveCloseProcessesAllowDeferForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferForceCountdown, InteractiveCloseProcessesAllowDefer, InteractiveAllowDefer
 Aliases:
 
 Required: False
@@ -377,7 +361,7 @@ This is converted to a deadline.
 
 ```yaml
 Type: UInt32
-Parameter Sets: InteractiveCloseProcessesAllowDeferCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferCloseProcesses, InteractiveCloseProcessesAllowDeferForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferForceCountdown, InteractiveCloseProcessesAllowDefer, InteractiveAllowDefer, InteractiveAllowDeferCloseProcesses
+Parameter Sets: InteractiveCloseProcessesAllowDeferCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferCloseProcesses, InteractiveCloseProcessesAllowDeferForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferForceCountdown, InteractiveCloseProcessesAllowDefer, InteractiveAllowDefer
 Aliases:
 
 Required: False
@@ -401,7 +385,7 @@ The deadline date will be displayed to the user in the format of their culture.
 
 ```yaml
 Type: String
-Parameter Sets: InteractiveCloseProcessesAllowDeferCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferCloseProcesses, InteractiveCloseProcessesAllowDeferForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferForceCountdown, InteractiveCloseProcessesAllowDefer, InteractiveAllowDefer, InteractiveAllowDeferCloseProcesses
+Parameter Sets: InteractiveCloseProcessesAllowDeferCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferCloseProcesses, InteractiveCloseProcessesAllowDeferForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferForceCountdown, InteractiveCloseProcessesAllowDefer, InteractiveAllowDefer
 Aliases:
 
 Required: False
@@ -423,7 +407,7 @@ Example:
 
 ```yaml
 Type: TimeSpan
-Parameter Sets: InteractiveCloseProcessesAllowDeferCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferCloseProcesses, InteractiveCloseProcessesAllowDeferForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferForceCountdown, InteractiveCloseProcessesAllowDefer, InteractiveAllowDefer, InteractiveAllowDeferCloseProcesses
+Parameter Sets: InteractiveCloseProcessesAllowDeferCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferCloseProcesses, InteractiveCloseProcessesAllowDeferForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferForceCountdown, InteractiveCloseProcessesAllowDefer, InteractiveAllowDefer
 Aliases:
 
 Required: False
@@ -474,7 +458,7 @@ This only takes effect if deferral is not allowed or has expired.
 
 ```yaml
 Type: SwitchParameter
-Parameter Sets: Interactive, InteractiveCloseProcessesAllowDeferCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferCloseProcesses, InteractiveCloseProcessesAllowDeferForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferForceCountdown, InteractiveCloseProcessesAllowDefer, InteractiveCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesCloseProcessesCountdown, InteractiveCloseProcesses, InteractiveAllowDeferForceCountdown, InteractiveAllowDefer, InteractiveAllowDeferCloseProcessesForceCountdown, InteractiveAllowDeferCloseProcesses
+Parameter Sets: Interactive, InteractiveCloseProcessesAllowDeferCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferCloseProcesses, InteractiveCloseProcessesAllowDeferForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferForceCountdown, InteractiveCloseProcessesAllowDefer, InteractiveCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesCloseProcessesCountdown, InteractiveCloseProcesses, InteractiveAllowDeferForceCountdown, InteractiveAllowDefer
 Aliases:
 
 Required: False
@@ -491,7 +475,7 @@ Default: $false.
 
 ```yaml
 Type: SwitchParameter
-Parameter Sets: Interactive, InteractiveCloseProcessesAllowDeferCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferCloseProcesses, InteractiveCloseProcessesAllowDeferForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferForceCountdown, InteractiveCloseProcessesAllowDefer, InteractiveCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesCloseProcessesCountdown, InteractiveCloseProcesses, InteractiveAllowDeferForceCountdown, InteractiveAllowDefer, InteractiveAllowDeferCloseProcessesForceCountdown, InteractiveAllowDeferCloseProcesses
+Parameter Sets: Interactive, InteractiveCloseProcessesAllowDeferCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferCloseProcesses, InteractiveCloseProcessesAllowDeferForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferForceCountdown, InteractiveCloseProcessesAllowDefer, InteractiveCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesCloseProcessesCountdown, InteractiveCloseProcesses, InteractiveAllowDeferForceCountdown, InteractiveAllowDefer
 Aliases:
 
 Required: False
@@ -507,7 +491,7 @@ Specifies whether the window is the topmost window.
 
 ```yaml
 Type: SwitchParameter
-Parameter Sets: Interactive, InteractiveCloseProcessesAllowDeferCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferCloseProcesses, InteractiveCloseProcessesAllowDeferForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferForceCountdown, InteractiveCloseProcessesAllowDefer, InteractiveCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesCloseProcessesCountdown, InteractiveCloseProcesses, InteractiveAllowDeferForceCountdown, InteractiveAllowDefer, InteractiveAllowDeferCloseProcessesForceCountdown, InteractiveAllowDeferCloseProcesses
+Parameter Sets: Interactive, InteractiveCloseProcessesAllowDeferCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferCloseProcesses, InteractiveCloseProcessesAllowDeferForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferForceCountdown, InteractiveCloseProcessesAllowDefer, InteractiveCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesCloseProcessesCountdown, InteractiveCloseProcesses, InteractiveAllowDeferForceCountdown, InteractiveAllowDefer
 Aliases:
 
 Required: False
@@ -524,7 +508,7 @@ Custom message must be populated for each language section in the string.psd1 fi
 
 ```yaml
 Type: SwitchParameter
-Parameter Sets: Interactive, InteractiveCloseProcessesAllowDeferCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferCloseProcesses, InteractiveCloseProcessesAllowDeferForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferForceCountdown, InteractiveCloseProcessesAllowDefer, InteractiveCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesCloseProcessesCountdown, InteractiveCloseProcesses, InteractiveAllowDeferForceCountdown, InteractiveAllowDefer, InteractiveAllowDeferCloseProcessesForceCountdown, InteractiveAllowDeferCloseProcesses
+Parameter Sets: Interactive, InteractiveCloseProcessesAllowDeferCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferCloseProcesses, InteractiveCloseProcessesAllowDeferForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferForceCountdown, InteractiveCloseProcessesAllowDefer, InteractiveCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesCloseProcessesCountdown, InteractiveCloseProcesses, InteractiveAllowDeferForceCountdown, InteractiveAllowDefer
 Aliases:
 
 Required: False
