- Repair some issues with ordered/unordered lists.

--- a/docs/Get-ADTWindowTitle.mdx
+++ b/docs/Get-ADTWindowTitle.mdx
@@ -41,10 +41,11 @@ Search for a window title.
 If window title searched for returns more than one result, then details for each window will be displayed.
 
 Returns the following properties for each window:
-- WindowTitle<br />
-- WindowHandle<br />
-- ParentProcess<br />
-- ParentProcessMainWindowHandle<br />
+
+- WindowTitle
+- WindowHandle
+- ParentProcess
+- ParentProcessMainWindowHandle
 - ParentProcessId
 
 Function does not work in SYSTEM context unless launched with "psexec.exe -s -i" to run it as an interactive process under the SYSTEM account.
