--- a/docs/Test-ADTBattery.mdx
+++ b/docs/Test-ADTBattery.mdx
@@ -43,12 +43,13 @@ Returns true if the current system is a laptop, otherwise false.
 ### -PassThru
 
 Outputs an object containing the following properties:
-- IsLaptop<br />
-- IsUsingACPower<br />
-- ACPowerLineStatus<br />
-- BatteryChargeStatus<br />
-- BatteryLifePercent<br />
-- BatteryLifeRemaining<br />
+
+- IsLaptop
+- IsUsingACPower
+- ACPowerLineStatus
+- BatteryChargeStatus
+- BatteryLifePercent
+- BatteryLifeRemaining
 - BatteryFullLifetime
 
 ```yaml
