--- a/docs/Show-ADTInstallationWelcome.mdx
+++ b/docs/Show-ADTInstallationWelcome.mdx
@@ -283,10 +283,11 @@ Show-ADTInstallationWelcome [-PersistPrompt] [-NoMinimizeWindows] [-NotTopMost] 
 ## DESCRIPTION
 
 The following prompts can be included in the welcome dialog:
-    a) Close the specified running applications, or optionally close the applications without showing a prompt (using the -Silent switch).<br />
-    b) Defer the deployment a certain number of times, for a certain number of days or until a deadline is reached.<br />
-    c) Countdown until applications are automatically closed.<br />
-    d) Prevent users from launching the specified applications while the deployment is in progress.
+
+* Close the specified running applications, or optionally close the applications without showing a prompt (using the `-Silent` switch).
+* Defer the deployment a certain number of times, for a certain number of days or until a deadline is reached.
+* Countdown until applications are automatically closed.
+* Prevent users from launching the specified applications while the deployment is in progress.
 
 ## EXAMPLES
 
