- Final fixes for ordered lists.

--- a/docs/New-ADTMsiTransform.mdx
+++ b/docs/New-ADTMsiTransform.mdx
@@ -80,10 +80,8 @@ If a transform file of the same name already exists, it will be deleted before a
 
 Default is:
 
-1.
-If -ApplyTransformPath was specified but not -NewTransformPath, then &lt;ApplyTransformPath&gt;.new.mst
-2.
-If only -MsiPath was specified, then &lt;MsiPath&gt;.mst
+1) If -ApplyTransformPath was specified but not -NewTransformPath, then &lt;ApplyTransformPath&gt;.new.mst
+2) If only -MsiPath was specified, then &lt;MsiPath&gt;.mst
 
 ```yaml
 Type: String
