- Uplift wildcard changes to `Get-ADTRegistryKey` to be the same as `Remove-ADTRegistryKey`.
I did this wrong during "- Add wildcard support to `Get-ADTRegistryKey`.", it's too blase to just permit wildcards on the old parameter as characters like `*` are perfectly valid in key names, so we need to have a Path/LiteralPath setup to accommodate this.

--- a/docs/Get-ADTRegistryKey.mdx
+++ b/docs/Get-ADTRegistryKey.mdx
@@ -11,8 +11,17 @@ Retrieves value names and value data for a specified registry key or optionally,
 
 ## SYNTAX
 
+### Path
+
 ```powershell
-Get-ADTRegistryKey [-Key] <String> [[-Name] <String>] [-Wow6432Node] [[-SID] <String>]
+Get-ADTRegistryKey -Path <String> [-Name <String>] [-Wow6432Node] [-SID <String>] [-ReturnEmptyKeyIfExists]
+ [-DoNotExpandEnvironmentNames] [<CommonParameters>]
+```
+
+### LiteralPath
+
+```powershell
+Get-ADTRegistryKey -LiteralPath <String> [-Name <String>] [-Wow6432Node] [-SID <String>]
  [-ReturnEmptyKeyIfExists] [-DoNotExpandEnvironmentNames] [<CommonParameters>]
 ```
 
@@ -67,20 +76,36 @@ This example retrieves the default value data for the specified registry key.
 
 ## PARAMETERS
 
-### -Key
+### -Path
 
-Path of the registry key.
+Path of the registry key, wildcards permitted.
 
 ```yaml
 Type: String
-Parameter Sets: (All)
+Parameter Sets: Path
 Aliases:
 
 Required: True
-Position: 1
+Position: Named
 Default value: None
 Accept pipeline input: False
 Accept wildcard characters: True
+```
+
+### -LiteralPath
+
+Literal path of the registry key.
+
+```yaml
+Type: String
+Parameter Sets: LiteralPath
+Aliases: Key
+
+Required: True
+Position: Named
+Default value: None
+Accept pipeline input: False
+Accept wildcard characters: False
 ```
 
 ### -Name
@@ -93,7 +118,7 @@ Parameter Sets: (All)
 Aliases:
 
 Required: False
-Position: 2
+Position: Named
 Default value: None
 Accept pipeline input: False
 Accept wildcard characters: False
@@ -128,7 +153,7 @@ Parameter Sets: (All)
 Aliases:
 
 Required: False
-Position: 3
+Position: Named
 Default value: None
 Accept pipeline input: False
 Accept wildcard characters: False
