- Leverage `[PSDefaultValue()]` decorations where it makes sense to do so.

--- a/docs/Copy-ADTContentToCache.mdx
+++ b/docs/Copy-ADTContentToCache.mdx
@@ -46,7 +46,7 @@ Aliases:
 
 Required: False
 Position: 1
-Default value: "$((Get-ADTConfig).Toolkit.CachePath)\$((Get-ADTSession).installName)"
+Default value: "$((Get-ADTConfig).Toolkit.CachePath)\$((Get-ADTSession).InstallName)"
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
