--- a/docs/New-ADTTemplate.mdx
+++ b/docs/New-ADTTemplate.mdx
@@ -70,7 +70,7 @@ Aliases:
 
 Required: False
 Position: 2
-Default value: "$($MyInvocation.MyCommand.Module.Name)_$($MyInvocation.MyCommand.Module.Version)"
+Default value: PSAppDeployToolkit_<ModuleVersion>
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
