--- a/docs/New-ADTShortcut.mdx
+++ b/docs/New-ADTShortcut.mdx
@@ -153,7 +153,6 @@ Accept wildcard characters: False
 
 Windows style of the application.
 Options: Normal, Maximized, Minimized.
-Default is: Normal.
 
 ```yaml
 Type: String
@@ -162,7 +161,7 @@ Aliases:
 
 Required: False
 Position: Named
-Default value: None
+Default value: Normal
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
