--- a/docs/Remove-ADTContentFromCache.mdx
+++ b/docs/Remove-ADTContentFromCache.mdx
@@ -44,7 +44,7 @@ Aliases:
 
 Required: False
 Position: 1
-Default value: "$((Get-ADTConfig).Toolkit.CachePath)\$((Get-ADTSession).installName)"
+Default value: "$((Get-ADTConfig).Toolkit.CachePath)\$((Get-ADTSession).InstallName)"
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
