--- a/docs/Remove-ADTRegistryKey.mdx
+++ b/docs/Remove-ADTRegistryKey.mdx
@@ -14,13 +14,15 @@ Deletes the specified registry key or value.
 ### Path
 
 ```powershell
-Remove-ADTRegistryKey -Path <String> [-Name <String>] [-Recurse] [-SID <String>] [<CommonParameters>]
+Remove-ADTRegistryKey -Path <String> [-Name <String>] [-Wow6432Node] [-Recurse] [-SID <String>]
+ [<CommonParameters>]
 ```
 
 ### LiteralPath
 
 ```powershell
-Remove-ADTRegistryKey -LiteralPath <String> [-Name <String>] [-Recurse] [-SID <String>] [<CommonParameters>]
+Remove-ADTRegistryKey -LiteralPath <String> [-Name <String>] [-Wow6432Node] [-Recurse] [-SID <String>]
+ [<CommonParameters>]
 ```
 
 ## DESCRIPTION
@@ -101,6 +103,22 @@ Aliases:
 Required: False
 Position: Named
 Default value: None
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
+### -Wow6432Node
+
+Specify this switch to read the 32-bit registry (Wow6432Node) on 64-bit systems.
+
+```yaml
+Type: SwitchParameter
+Parameter Sets: (All)
+Aliases:
+
+Required: False
+Position: Named
+Default value: False
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
