- Update markdown help exports following immutability changes.

--- a/docs/Get-ADTCommandTable.mdx
+++ b/docs/Get-ADTCommandTable.mdx
@@ -40,7 +40,7 @@ Returns PSAppDeployToolkit's safe command lookup table.
 ### You cannot pipe objects to this function.
 ## OUTPUTS
 
-### System.Collections.ObjectModel.ReadOnlyDictionary[System.String, System.Management.Automation.CommandInfo]
+### System.Collections.Generic.IReadOnlyDictionary[System.String, System.Management.Automation.CommandInfo]
 
 ### Returns PSAppDeployTookit's safe command lookup table as a ReadOnlyDictionary.
 ## NOTES
