--- a/docs/Get-ADTMsiTableProperty.mdx
+++ b/docs/Get-ADTMsiTableProperty.mdx
@@ -167,7 +167,7 @@ This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable
 ### You cannot pipe objects to this function.
 ## OUTPUTS
 
-### System.Collections.ObjectModel.ReadOnlyDictionary`2[[System.String],[System.Object]]
+### System.Collections.Generic.IReadOnlyDictionary[System.String, System.Object]
 
 ### Returns a readonly dictionary with the properties as key/value pairs.
 ## NOTES
