--- a/docs/Set-ADTActiveSetup.mdx
+++ b/docs/Set-ADTActiveSetup.mdx
@@ -138,13 +138,12 @@ Optional.
 Specify version for Active setup entry.
 Active Setup is not triggered if Version value has more than 8 consecutive digits.
 Use commas to get around this limitation.
-Default: YYYYMMDDHHMMSS
 
 Note:
     - Do not use this parameter if it is not necessary.
 PSADT will handle this parameter automatically using the time of the installation as the version number.
-    - In Windows 10, Scripts and EXEs might be blocked by AppLocker.
-Ensure that the path given to -StubExePath will permit end users to run Scripts and EXEs unelevated.
+    - In Windows 10, scripts and executables might be blocked by AppLocker.
+Ensure that the path given to -StubExePath will permit end users to run scripts and executables unelevated.
 
 ```yaml
 Type: String
