--- a/docs/Unblock-ADTAppExecution.mdx
+++ b/docs/Unblock-ADTAppExecution.mdx
@@ -17,7 +17,7 @@ Unblock-ADTAppExecution [[-Tasks] <CimInstance[]>] [<CommonParameters>]
 
 ## DESCRIPTION
 
-This function is called by the Close-ADTSession function or when the script itself is called with the parameters -CleanupBlockedApps.
+This function is called by the Close-ADTSession function.
 It undoes the actions performed by Block-ADTAppExecution, allowing previously blocked applications to execute.
 
 ## EXAMPLES
